# tinder-but-for-dogs

./: README.md
tinderpp-core/: CMakeLists.txt  package.xml
tinderpp-core/core-py/facerec/py/: setup.py
tinderpp-core/core-py/facerec/py/apps/videofacerec/: simple_videofacerec.py
tinderpp-core/core-py/tinderpp/: face_rec.py  facebook.py  fr_tools.py  haar.py  verify_dataset.py  vision.py
tinderpp-core/core-py/webcam-pulse-detector/: get_pulse.py  setup.py
tinderpp-core/core-py/webcam-pulse-detector/pulse_detect/: processors_noopenmdao.py
